src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     declaration -> declaration_specifiers ;
Rule 6     declaration -> declaration_specifiers init_declarator_list ;
Rule 7     init_declarator_list -> init_declarator
Rule 8     init_declarator_list -> init_declarator_list , init_declarator
Rule 9     init_declarator -> declarator
Rule 10    init_declarator -> declarator = initializer
Rule 11    declaration_specifiers -> storage_class_specifier
Rule 12    declaration_specifiers -> storage_class_specifier declaration_specifiers
Rule 13    declaration_specifiers -> type_specifier
Rule 14    declaration_specifiers -> type_specifier declaration_specifiers
Rule 15    declaration_specifiers -> type_qualifier
Rule 16    declaration_specifiers -> type_qualifier declaration_specifiers
Rule 17    declaration_specifiers -> function_specifier
Rule 18    declaration_specifiers -> function_specifier declaration_specifiers
Rule 19    storage_class_specifier -> TYPEDEF
Rule 20    storage_class_specifier -> EXTERN
Rule 21    storage_class_specifier -> STATIC
Rule 22    storage_class_specifier -> AUTO
Rule 23    storage_class_specifier -> REGISTER
Rule 24    function_specifier -> INLINE
Rule 25    type_specifier -> VOID
Rule 26    type_specifier -> CHAR
Rule 27    type_specifier -> SHORT
Rule 28    type_specifier -> INT
Rule 29    type_specifier -> LONG
Rule 30    type_specifier -> FLOAT
Rule 31    type_specifier -> DOUBLE
Rule 32    type_specifier -> SIGNED
Rule 33    type_specifier -> UNSIGNED
Rule 34    type_specifier -> BOOL
Rule 35    type_specifier -> struct_or_union_specifier
Rule 36    type_specifier -> enum_specifier
Rule 37    type_qualifier -> CONST
Rule 38    type_qualifier -> RESTRICT
Rule 39    type_qualifier -> VOLATILE
Rule 40    enum_specifier -> ENUM { enumerator_list }
Rule 41    enum_specifier -> ENUM IDENTIFIER { enumerator_list }
Rule 42    enum_specifier -> ENUM { enumerator_list , }
Rule 43    enum_specifier -> ENUM IDENTIFIER { enumerator_list , }
Rule 44    enum_specifier -> ENUM IDENTIFIER
Rule 45    enumerator_list -> enumerator
Rule 46    enumerator_list -> enumerator_list , enumerator
Rule 47    enumerator -> IDENTIFIER
Rule 48    enumerator -> IDENTIFIER = constant_expression
Rule 49    struct_or_union_specifier -> struct_or_union IDENTIFIER { struct_declaration_list }
Rule 50    struct_or_union_specifier -> struct_or_union { struct_declaration_list }
Rule 51    struct_or_union_specifier -> struct_or_union IDENTIFIER
Rule 52    struct_or_union -> STRUCT
Rule 53    struct_or_union -> UNION
Rule 54    struct_declaration_list -> struct_declaration
Rule 55    struct_declaration_list -> struct_declaration_list struct_declaration
Rule 56    struct_declaration -> specifier_qualifier_list struct_declarator_list ;
Rule 57    specifier_qualifier_list -> type_specifier specifier_qualifier_list
Rule 58    specifier_qualifier_list -> type_specifier
Rule 59    specifier_qualifier_list -> type_qualifier specifier_qualifier_list
Rule 60    specifier_qualifier_list -> type_qualifier
Rule 61    struct_declarator_list -> struct_declarator
Rule 62    struct_declarator_list -> struct_declarator_list , struct_declarator
Rule 63    struct_declarator -> declarator
Rule 64    struct_declarator -> : constant_expression
Rule 65    struct_declarator -> declarator : constant_expression
Rule 66    declarator -> pointer direct_declarator
Rule 67    declarator -> direct_declarator
Rule 68    pointer -> *
Rule 69    pointer -> * type_qualifier_list
Rule 70    pointer -> * pointer
Rule 71    pointer -> * type_qualifier_list pointer
Rule 72    type_qualifier_list -> type_qualifier
Rule 73    type_qualifier_list -> type_qualifier_list type_qualifier
Rule 74    direct_declarator -> IDENTIFIER
Rule 75    direct_declarator -> ( declarator )
Rule 76    direct_declarator -> direct_declarator [ type_qualifier_list assignment_expression ]
Rule 77    direct_declarator -> direct_declarator [ type_qualifier_list ]
Rule 78    direct_declarator -> direct_declarator [ assignment_expression ]
Rule 79    direct_declarator -> direct_declarator [ STATIC type_qualifier_list assignment_expression ]
Rule 80    direct_declarator -> direct_declarator [ type_qualifier_list STATIC assignment_expression ]
Rule 81    direct_declarator -> direct_declarator [ type_qualifier_list * ]
Rule 82    direct_declarator -> direct_declarator [ * ]
Rule 83    direct_declarator -> direct_declarator [ ]
Rule 84    direct_declarator -> direct_declarator ( parameter_type_list )
Rule 85    direct_declarator -> direct_declarator ( identifier_list )
Rule 86    direct_declarator -> direct_declarator ( )
Rule 87    identifier_list -> IDENTIFIER
Rule 88    identifier_list -> identifier_list , IDENTIFIER
Rule 89    assignment_expression -> conditional_expression
Rule 90    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 91    assignment_operator -> =
Rule 92    assignment_operator -> ASSIGN_OP
Rule 93    constant_expression -> conditional_expression
Rule 94    conditional_expression -> logical_or_expression
Rule 95    conditional_expression -> logical_or_expression ? expression : conditional_expression
Rule 96    logical_or_expression -> logical_and_expression
Rule 97    logical_or_expression -> logical_or_expression OR_OP logical_and_expression
Rule 98    logical_and_expression -> inclusive_or_expression
Rule 99    logical_and_expression -> logical_and_expression AND_OP inclusive_or_expression
Rule 100   inclusive_or_expression -> exclusive_or_expression
Rule 101   inclusive_or_expression -> inclusive_or_expression | exclusive_or_expression
Rule 102   exclusive_or_expression -> and_expression
Rule 103   exclusive_or_expression -> exclusive_or_expression ^ and_expression
Rule 104   and_expression -> equality_expression
Rule 105   and_expression -> and_expression & equality_expression
Rule 106   equality_expression -> relational_expression
Rule 107   equality_expression -> equality_expression EQ_NE relational_expression
Rule 108   relational_expression -> shift_expression
Rule 109   relational_expression -> relational_expression < shift_expression
Rule 110   relational_expression -> relational_expression > shift_expression
Rule 111   relational_expression -> relational_expression GE_LE shift_expression
Rule 112   shift_expression -> additive_expression
Rule 113   shift_expression -> shift_expression SHIFT_OP additive_expression
Rule 114   additive_expression -> multiplicative_expression
Rule 115   additive_expression -> additive_expression + multiplicative_expression
Rule 116   additive_expression -> additive_expression - multiplicative_expression
Rule 117   multiplicative_expression -> cast_expression
Rule 118   multiplicative_expression -> multiplicative_expression * cast_expression
Rule 119   multiplicative_expression -> multiplicative_expression / cast_expression
Rule 120   multiplicative_expression -> multiplicative_expression % cast_expression
Rule 121   cast_expression -> unary_expression
Rule 122   cast_expression -> ( type_name ) cast_expression
Rule 123   unary_expression -> postfix_expression
Rule 124   unary_expression -> INC_DEC unary_expression
Rule 125   unary_expression -> unary_operator cast_expression
Rule 126   unary_expression -> SIZEOF unary_expression
Rule 127   unary_expression -> SIZEOF ( type_name )
Rule 128   unary_operator -> &
Rule 129   unary_operator -> *
Rule 130   unary_operator -> +
Rule 131   unary_operator -> -
Rule 132   unary_operator -> ~
Rule 133   unary_operator -> !
Rule 134   postfix_expression -> primary_expression
Rule 135   postfix_expression -> postfix_expression [ expression ]
Rule 136   postfix_expression -> postfix_expression ( )
Rule 137   postfix_expression -> postfix_expression ( argument_expression_list )
Rule 138   postfix_expression -> postfix_expression . IDENTIFIER
Rule 139   postfix_expression -> postfix_expression PTR_OP IDENTIFIER
Rule 140   postfix_expression -> postfix_expression INC_DEC
Rule 141   postfix_expression -> ( type_name ) { initializer_list }
Rule 142   postfix_expression -> ( type_name ) { initializer_list , }
Rule 143   primary_expression -> IDENTIFIER
Rule 144   primary_expression -> CONSTANT
Rule 145   primary_expression -> STRING_LITERAL
Rule 146   primary_expression -> ( expression )
Rule 147   expression -> assignment_expression
Rule 148   expression -> expression , assignment_expression
Rule 149   type_name -> specifier_qualifier_list
Rule 150   type_name -> specifier_qualifier_list abstract_declarator
Rule 151   abstract_declarator -> pointer
Rule 152   abstract_declarator -> direct_abstract_declarator
Rule 153   abstract_declarator -> pointer direct_abstract_declarator
Rule 154   direct_abstract_declarator -> ( abstract_declarator )
Rule 155   direct_abstract_declarator -> [ ]
Rule 156   direct_abstract_declarator -> [ assignment_expression ]
Rule 157   direct_abstract_declarator -> direct_abstract_declarator [ ]
Rule 158   direct_abstract_declarator -> direct_abstract_declarator [ assignment_expression ]
Rule 159   direct_abstract_declarator -> [ * ]
Rule 160   direct_abstract_declarator -> direct_abstract_declarator [ * ]
Rule 161   direct_abstract_declarator -> ( )
Rule 162   direct_abstract_declarator -> ( parameter_type_list )
Rule 163   direct_abstract_declarator -> direct_abstract_declarator ( )
Rule 164   direct_abstract_declarator -> direct_abstract_declarator ( parameter_type_list )
Rule 165   parameter_type_list -> parameter_list
Rule 166   parameter_type_list -> parameter_list , ELLIPSIS
Rule 167   parameter_list -> parameter_declaration
Rule 168   parameter_list -> parameter_list , parameter_declaration
Rule 169   parameter_declaration -> declaration_specifiers declarator
Rule 170   parameter_declaration -> declaration_specifiers abstract_declarator
Rule 171   parameter_declaration -> declaration_specifiers
Rule 172   argument_expression_list -> assignment_expression
Rule 173   argument_expression_list -> argument_expression_list , assignment_expression
Rule 174   initializer_list -> initializer
Rule 175   initializer_list -> designation initializer
Rule 176   initializer_list -> initializer_list , initializer
Rule 177   initializer_list -> initializer_list , designation initializer
Rule 178   initializer -> assignment_expression
Rule 179   initializer -> { initializer_list }
Rule 180   initializer -> { initializer_list , }
Rule 181   designation -> designator_list =
Rule 182   designator_list -> designator
Rule 183   designator_list -> designator_list designator
Rule 184   designator -> [ constant_expression ]
Rule 185   designator -> . IDENTIFIER
Rule 186   function_definition -> declaration_specifiers declarator declaration_list compound_statement
Rule 187   function_definition -> declaration_specifiers declarator compound_statement
Rule 188   declaration_list -> declaration
Rule 189   declaration_list -> declaration_list declaration
Rule 190   compound_statement -> { }
Rule 191   compound_statement -> { block_item_list }
Rule 192   block_item_list -> block_item
Rule 193   block_item_list -> block_item_list block_item
Rule 194   block_item -> declaration
Rule 195   block_item -> statement
Rule 196   statement -> labeled_statement
Rule 197   statement -> compound_statement
Rule 198   statement -> expression_statement
Rule 199   statement -> selection_statement
Rule 200   statement -> iteration_statement
Rule 201   statement -> jump_statement
Rule 202   labeled_statement -> IDENTIFIER : statement
Rule 203   labeled_statement -> CASE constant_expression : statement
Rule 204   labeled_statement -> DEFAULT : statement
Rule 205   expression_statement -> ;
Rule 206   expression_statement -> expression ;
Rule 207   selection_statement -> IF ( expression ) statement ELSE statement
Rule 208   selection_statement -> IF ( expression ) statement
Rule 209   selection_statement -> SWITCH ( expression ) statement
Rule 210   iteration_statement -> WHILE ( expression ) statement
Rule 211   iteration_statement -> DO statement WHILE ( expression ) ;
Rule 212   iteration_statement -> FOR ( expression_statement expression_statement ) statement
Rule 213   iteration_statement -> FOR ( expression_statement expression_statement expression ) statement
Rule 214   iteration_statement -> FOR ( declaration expression_statement ) statement
Rule 215   iteration_statement -> FOR ( declaration expression_statement expression ) statement
Rule 216   jump_statement -> GOTO IDENTIFIER ;
Rule 217   jump_statement -> CONTINUE ;
Rule 218   jump_statement -> BREAK ;
Rule 219   jump_statement -> RETURN ;
Rule 220   jump_statement -> RETURN expression ;

Terminals, with rules where they appear

!                    : 133
%                    : 120
&                    : 105 128
(                    : 75 84 85 86 122 127 136 137 141 142 146 154 161 162 163 164 207 208 209 210 211 212 213 214 215
)                    : 75 84 85 86 122 127 136 137 141 142 146 154 161 162 163 164 207 208 209 210 211 212 213 214 215
*                    : 68 69 70 71 81 82 118 129 159 160
+                    : 115 130
,                    : 8 42 43 46 62 88 142 148 166 168 173 176 177 180
-                    : 116 131
.                    : 138 185
/                    : 119
:                    : 64 65 95 202 203 204
;                    : 5 6 56 205 206 211 216 217 218 219 220
<                    : 109
=                    : 10 48 91 181
>                    : 110
?                    : 95
AND_OP               : 99
ASSIGN_OP            : 92
AUTO                 : 22
BOOL                 : 34
BREAK                : 218
CASE                 : 203
CHAR                 : 26
CONST                : 37
CONSTANT             : 144
CONTINUE             : 217
DEFAULT              : 204
DO                   : 211
DOUBLE               : 31
ELLIPSIS             : 166
ELSE                 : 207
ENUM                 : 40 41 42 43 44
EQ_NE                : 107
EXTERN               : 20
FLOAT                : 30
FOR                  : 212 213 214 215
GE_LE                : 111
GOTO                 : 216
IDENTIFIER           : 41 43 44 47 48 49 51 74 87 88 138 139 143 185 202 216
IF                   : 207 208
INC_DEC              : 124 140
INLINE               : 24
INT                  : 28
LONG                 : 29
OR_OP                : 97
PTR_OP               : 139
REGISTER             : 23
RESTRICT             : 38
RETURN               : 219 220
SHIFT_OP             : 113
SHORT                : 27
SIGNED               : 32
SIZEOF               : 126 127
STATIC               : 21 79 80
STRING_LITERAL       : 145
STRUCT               : 52
SWITCH               : 209
TYPEDEF              : 19
UNION                : 53
UNSIGNED             : 33
VOID                 : 25
VOLATILE             : 39
WHILE                : 210 211
[                    : 76 77 78 79 80 81 82 83 135 155 156 157 158 159 160 184
]                    : 76 77 78 79 80 81 82 83 135 155 156 157 158 159 160 184
^                    : 103
error                : 
{                    : 40 41 42 43 49 50 141 142 179 180 190 191
|                    : 101
}                    : 40 41 42 43 49 50 141 142 179 180 190 191
~                    : 132

Nonterminals, with rules where they appear

abstract_declarator  : 150 154 170
additive_expression  : 112 113 115 116
and_expression       : 102 103 105
argument_expression_list : 137 173
assignment_expression : 76 78 79 80 90 147 148 156 158 172 173 178
assignment_operator  : 90
block_item           : 192 193
block_item_list      : 191 193
cast_expression      : 117 118 119 120 122 125
compound_statement   : 186 187 197
conditional_expression : 89 93 95
constant_expression  : 48 64 65 184 203
declaration          : 4 188 189 194 214 215
declaration_list     : 186 189
declaration_specifiers : 5 6 12 14 16 18 169 170 171 186 187
declarator           : 9 10 63 65 75 169 186 187
designation          : 175 177
designator           : 182 183
designator_list      : 181 183
direct_abstract_declarator : 152 153 157 158 160 163 164
direct_declarator    : 66 67 76 77 78 79 80 81 82 83 84 85 86
enum_specifier       : 36
enumerator           : 45 46
enumerator_list      : 40 41 42 43 46
equality_expression  : 104 105 107
exclusive_or_expression : 100 101 103
expression           : 95 135 146 148 206 207 208 209 210 211 213 215 220
expression_statement : 198 212 212 213 213 214 215
external_declaration : 1 2
function_definition  : 3
function_specifier   : 17 18
identifier_list      : 85 88
inclusive_or_expression : 98 99 101
init_declarator      : 7 8
init_declarator_list : 6 8
initializer          : 10 174 175 176 177
initializer_list     : 141 142 176 177 179 180
iteration_statement  : 200
jump_statement       : 201
labeled_statement    : 196
logical_and_expression : 96 97 99
logical_or_expression : 94 95 97
multiplicative_expression : 114 115 116 118 119 120
parameter_declaration : 167 168
parameter_list       : 165 166 168
parameter_type_list  : 84 162 164
pointer              : 66 70 71 151 153
postfix_expression   : 123 135 136 137 138 139 140
primary_expression   : 134
relational_expression : 106 107 109 110 111
selection_statement  : 199
shift_expression     : 108 109 110 111 113
specifier_qualifier_list : 56 57 59 149 150
statement            : 195 202 203 204 207 207 208 209 210 211 212 213 214 215
storage_class_specifier : 11 12
struct_declaration   : 54 55
struct_declaration_list : 49 50 55
struct_declarator    : 61 62
struct_declarator_list : 56 62
struct_or_union      : 49 50 51
struct_or_union_specifier : 35
translation_unit     : 2 0
type_name            : 122 127 141 142
type_qualifier       : 15 16 59 60 72 73
type_qualifier_list  : 69 71 73 76 77 79 80 81
type_specifier       : 13 14 57 58
unary_expression     : 90 121 124 126
unary_operator       : 125

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (186) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (187) function_definition -> . declaration_specifiers declarator compound_statement
    (5) declaration -> . declaration_specifiers ;
    (6) declaration -> . declaration_specifiers init_declarator_list ;
    (11) declaration_specifiers -> . storage_class_specifier
    (12) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (13) declaration_specifiers -> . type_specifier
    (14) declaration_specifiers -> . type_specifier declaration_specifiers
    (15) declaration_specifiers -> . type_qualifier
    (16) declaration_specifiers -> . type_qualifier declaration_specifiers
    (17) declaration_specifiers -> . function_specifier
    (18) declaration_specifiers -> . function_specifier declaration_specifiers
    (19) storage_class_specifier -> . TYPEDEF
    (20) storage_class_specifier -> . EXTERN
    (21) storage_class_specifier -> . STATIC
    (22) storage_class_specifier -> . AUTO
    (23) storage_class_specifier -> . REGISTER
    (25) type_specifier -> . VOID
    (26) type_specifier -> . CHAR
    (27) type_specifier -> . SHORT
    (28) type_specifier -> . INT
    (29) type_specifier -> . LONG
    (30) type_specifier -> . FLOAT
    (31) type_specifier -> . DOUBLE
    (32) type_specifier -> . SIGNED
    (33) type_specifier -> . UNSIGNED
    (34) type_specifier -> . BOOL
    (35) type_specifier -> . struct_or_union_specifier
    (36) type_specifier -> . enum_specifier
    (37) type_qualifier -> . CONST
    (38) type_qualifier -> . RESTRICT
    (39) type_qualifier -> . VOLATILE
    (24) function_specifier -> . INLINE
    (49) struct_or_union_specifier -> . struct_or_union IDENTIFIER { struct_declaration_list }
    (50) struct_or_union_specifier -> . struct_or_union { struct_declaration_list }
    (51) struct_or_union_specifier -> . struct_or_union IDENTIFIER
    (40) enum_specifier -> . ENUM { enumerator_list }
    (41) enum_specifier -> . ENUM IDENTIFIER { enumerator_list }
    (42) enum_specifier -> . ENUM { enumerator_list , }
    (43) enum_specifier -> . ENUM IDENTIFIER { enumerator_list , }
    (44) enum_specifier -> . ENUM IDENTIFIER
    (52) struct_or_union -> . STRUCT
    (53) struct_or_union -> . UNION

    TYPEDEF         shift and go to state 10
    EXTERN          shift and go to state 11
    STATIC          shift and go to state 12
    AUTO            shift and go to state 13
    REGISTER        shift and go to state 14
    VOID            shift and go to state 15
    CHAR            shift and go to state 16
    SHORT           shift and go to state 17
    INT             shift and go to state 18
    LONG            shift and go to state 19
    FLOAT           shift and go to state 20
    DOUBLE          shift and go to state 21
    SIGNED          shift and go to state 22
    UNSIGNED        shift and go to state 23
    BOOL            shift and go to state 24
    CONST           shift and go to state 27
    RESTRICT        shift and go to state 28
    VOLATILE        shift and go to state 29
    INLINE          shift and go to state 30
    ENUM            shift and go to state 32
    STRUCT          shift and go to state 33
    UNION           shift and go to state 34

    translation_unit               shift and go to state 1
    external_declaration           shift and go to state 2
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    storage_class_specifier        shift and go to state 6
    type_specifier                 shift and go to state 7
    type_qualifier                 shift and go to state 8
    function_specifier             shift and go to state 9
    struct_or_union_specifier      shift and go to state 25
    enum_specifier                 shift and go to state 26
    struct_or_union                shift and go to state 31

state 1

    (0) S' -> translation_unit .
    (2) translation_unit -> translation_unit . external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (186) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (187) function_definition -> . declaration_specifiers declarator compound_statement
    (5) declaration -> . declaration_specifiers ;
    (6) declaration -> . declaration_specifiers init_declarator_list ;
    (11) declaration_specifiers -> . storage_class_specifier
    (12) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (13) declaration_specifiers -> . type_specifier
    (14) declaration_specifiers -> . type_specifier declaration_specifiers
    (15) declaration_specifiers -> . type_qualifier
    (16) declaration_specifiers -> . type_qualifier declaration_specifiers
    (17) declaration_specifiers -> . function_specifier
    (18) declaration_specifiers -> . function_specifier declaration_specifiers
    (19) storage_class_specifier -> . TYPEDEF
    (20) storage_class_specifier -> . EXTERN
    (21) storage_class_specifier -> . STATIC
    (22) storage_class_specifier -> . AUTO
    (23) storage_class_specifier -> . REGISTER
    (25) type_specifier -> . VOID
    (26) type_specifier -> . CHAR
    (27) type_specifier -> . SHORT
    (28) type_specifier -> . INT
    (29) type_specifier -> . LONG
    (30) type_specifier -> . FLOAT
    (31) type_specifier -> . DOUBLE
    (32) type_specifier -> . SIGNED
    (33) type_specifier -> . UNSIGNED
    (34) type_specifier -> . BOOL
    (35) type_specifier -> . struct_or_union_specifier
    (36) type_specifier -> . enum_specifier
    (37) type_qualifier -> . CONST
    (38) type_qualifier -> . RESTRICT
    (39) type_qualifier -> . VOLATILE
    (24) function_specifier -> . INLINE
    (49) struct_or_union_specifier -> . struct_or_union IDENTIFIER { struct_declaration_list }
    (50) struct_or_union_specifier -> . struct_or_union { struct_declaration_list }
    (51) struct_or_union_specifier -> . struct_or_union IDENTIFIER
    (40) enum_specifier -> . ENUM { enumerator_list }
    (41) enum_specifier -> . ENUM IDENTIFIER { enumerator_list }
    (42) enum_specifier -> . ENUM { enumerator_list , }
    (43) enum_specifier -> . ENUM IDENTIFIER { enumerator_list , }
    (44) enum_specifier -> . ENUM IDENTIFIER
    (52) struct_or_union -> . STRUCT
    (53) struct_or_union -> . UNION

    TYPEDEF         shift and go to state 10
    EXTERN          shift and go to state 11
    STATIC          shift and go to state 12
    AUTO            shift and go to state 13
    REGISTER        shift and go to state 14
    VOID            shift and go to state 15
    CHAR            shift and go to state 16
    SHORT           shift and go to state 17
    INT             shift and go to state 18
    LONG            shift and go to state 19
    FLOAT           shift and go to state 20
    DOUBLE          shift and go to state 21
    SIGNED          shift and go to state 22
    UNSIGNED        shift and go to state 23
    BOOL            shift and go to state 24
    CONST           shift and go to state 27
    RESTRICT        shift and go to state 28
    VOLATILE        shift and go to state 29
    INLINE          shift and go to state 30
    ENUM            shift and go to state 32
    STRUCT          shift and go to state 33
    UNION           shift and go to state 34

    external_declaration           shift and go to state 35
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    storage_class_specifier        shift and go to state 6
    type_specifier                 shift and go to state 7
    type_qualifier                 shift and go to state 8
    function_specifier             shift and go to state 9
    struct_or_union_specifier      shift and go to state 25
    enum_specifier                 shift and go to state 26
    struct_or_union                shift and go to state 31

state 2

    (1) translation_unit -> external_declaration .

    TYPEDEF         reduce using rule 1 (translation_unit -> external_declaration .)
    EXTERN          reduce using rule 1 (translation_unit -> external_declaration .)
    STATIC          reduce using rule 1 (translation_unit -> external_declaration .)
    AUTO            reduce using rule 1 (translation_unit -> external_declaration .)
    REGISTER        reduce using rule 1 (translation_unit -> external_declaration .)
    VOID            reduce using rule 1 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 1 (translation_unit -> external_declaration .)
    SHORT           reduce using rule 1 (translation_unit -> external_declaration .)
    INT             reduce using rule 1 (translation_unit -> external_declaration .)
    LONG            reduce using rule 1 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 1 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 1 (translation_unit -> external_declaration .)
    SIGNED          reduce using rule 1 (translation_unit -> external_declaration .)
    UNSIGNED        reduce using rule 1 (translation_unit -> external_declaration .)
    BOOL            reduce using rule 1 (translation_unit -> external_declaration .)
    CONST           reduce using rule 1 (translation_unit -> external_declaration .)
    RESTRICT        reduce using rule 1 (translation_unit -> external_declaration .)
    VOLATILE        reduce using rule 1 (translation_unit -> external_declaration .)
    INLINE          reduce using rule 1 (translation_unit -> external_declaration .)
    ENUM            reduce using rule 1 (translation_unit -> external_declaration .)
    STRUCT          reduce using rule 1 (translation_unit -> external_declaration .)
    UNION           reduce using rule 1 (translation_unit -> external_declaration .)
    $end            reduce using rule 1 (translation_unit -> external_declaration .)


state 3

    (3) external_declaration -> function_definition .

    TYPEDEF         reduce using rule 3 (external_declaration -> function_definition .)
    EXTERN          reduce using rule 3 (external_declaration -> function_definition .)
    STATIC          reduce using rule 3 (external_declaration -> function_definition .)
    AUTO            reduce using rule 3 (external_declaration -> function_definition .)
    REGISTER        reduce using rule 3 (external_declaration -> function_definition .)
    VOID            reduce using rule 3 (external_declaration -> function_definition .)
    CHAR            reduce using rule 3 (external_declaration -> function_definition .)
    SHORT           reduce using rule 3 (external_declaration -> function_definition .)
    INT             reduce using rule 3 (external_declaration -> function_definition .)
    LONG            reduce using rule 3 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 3 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 3 (external_declaration -> function_definition .)
    SIGNED          reduce using rule 3 (external_declaration -> function_definition .)
    UNSIGNED        reduce using rule 3 (external_declaration -> function_definition .)
    BOOL            reduce using rule 3 (external_declaration -> function_definition .)
    CONST           reduce using rule 3 (external_declaration -> function_definition .)
    RESTRICT        reduce using rule 3 (external_declaration -> function_definition .)
    VOLATILE        reduce using rule 3 (external_declaration -> function_definition .)
    INLINE          reduce using rule 3 (external_declaration -> function_definition .)
    ENUM            reduce using rule 3 (external_declaration -> function_definition .)
    STRUCT          reduce using rule 3 (external_declaration -> function_definition .)
    UNION           reduce using rule 3 (external_declaration -> function_definition .)
    $end            reduce using rule 3 (external_declaration -> function_definition .)


state 4

    (4) external_declaration -> declaration .

    TYPEDEF         reduce using rule 4 (external_declaration -> declaration .)
    EXTERN          reduce using rule 4 (external_declaration -> declaration .)
    STATIC          reduce using rule 4 (external_declaration -> declaration .)
    AUTO            reduce using rule 4 (external_declaration -> declaration .)
    REGISTER        reduce using rule 4 (external_declaration -> declaration .)
    VOID            reduce using rule 4 (external_declaration -> declaration .)
    CHAR            reduce using rule 4 (external_declaration -> declaration .)
    SHORT           reduce using rule 4 (external_declaration -> declaration .)
    INT             reduce using rule 4 (external_declaration -> declaration .)
    LONG            reduce using rule 4 (external_declaration -> declaration .)
    FLOAT           reduce using rule 4 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 4 (external_declaration -> declaration .)
    SIGNED          reduce using rule 4 (external_declaration -> declaration .)
    UNSIGNED        reduce using rule 4 (external_declaration -> declaration .)
    BOOL            reduce using rule 4 (external_declaration -> declaration .)
    CONST           reduce using rule 4 (external_declaration -> declaration .)
    RESTRICT        reduce using rule 4 (external_declaration -> declaration .)
    VOLATILE        reduce using rule 4 (external_declaration -> declaration .)
    INLINE          reduce using rule 4 (external_declaration -> declaration .)
    ENUM            reduce using rule 4 (external_declaration -> declaration .)
    STRUCT          reduce using rule 4 (external_declaration -> declaration .)
    UNION           reduce using rule 4 (external_declaration -> declaration .)
    $end            reduce using rule 4 (external_declaration -> declaration .)


state 5

    (186) function_definition -> declaration_specifiers . declarator declaration_list compound_statement
    (187) function_definition -> declaration_specifiers . declarator compound_statement
    (5) declaration -> declaration_specifiers . ;
    (6) declaration -> declaration_specifiers . init_declarator_list ;
    (66) declarator -> . pointer direct_declarator
    (67) declarator -> . direct_declarator
    (7) init_declarator_list -> . init_declarator
    (8) init_declarator_list -> . init_declarator_list , init_declarator
    (68) pointer -> . *
    (69) pointer -> . * type_qualifier_list
    (70) pointer -> . * pointer
    (71) pointer -> . * type_qualifier_list pointer
    (74) direct_declarator -> . IDENTIFIER
    (75) direct_declarator -> . ( declarator )
    (76) direct_declarator -> . direct_declarator [ type_qualifier_list assignment_expression ]
    (77) direct_declarator -> . direct_declarator [ type_qualifier_list ]
    (78) direct_declarator -> . direct_declarator [ assignment_expression ]
    (79) direct_declarator -> . direct_declarator [ STATIC type_qualifier_list assignment_expression ]
    (80) direct_declarator -> . direct_declarator [ type_qualifier_list STATIC assignment_expression ]
    (81) direct_declarator -> . direct_declarator [ type_qualifier_list * ]
    (82) direct_declarator -> . direct_declarator [ * ]
    (83) direct_declarator -> . direct_declarator [ ]
    (84) direct_declarator -> . direct_declarator ( parameter_type_list )
    (85) direct_declarator -> . direct_declarator ( identifier_list )
    (86) direct_declarator -> . direct_declarator ( )
    (9) init_declarator -> . declarator
    (10) init_declarator -> . declarator = initializer

    ;               shift and go to state 37
    *               shift and go to state 42
    IDENTIFIER      shift and go to state 43
    (               shift and go to state 44

    declarator                     shift and go to state 36
    init_declarator_list           shift and go to state 38
    pointer                        shift and go to state 39
    direct_declarator              shift and go to state 40
    init_declarator                shift and go to state 41

state 6

    (11) declaration_specifiers -> storage_class_specifier .
    (12) declaration_specifiers -> storage_class_specifier . declaration_specifiers
    (11) declaration_specifiers -> . storage_class_specifier
    (12) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (13) declaration_specifiers -> . type_specifier
    (14) declaration_specifiers -> . type_specifier declaration_specifiers
    (15) declaration_specifiers -> . type_qualifier
    (16) declaration_specifiers -> . type_qualifier declaration_specifiers
    (17) declaration_specifiers -> . function_specifier
    (18) declaration_specifiers -> . function_specifier declaration_specifiers
    (19) storage_class_specifier -> . TYPEDEF
    (20) storage_class_specifier -> . EXTERN
    (21) storage_class_specifier -> . STATIC
    (22) storage_class_specifier -> . AUTO
    (23) storage_class_specifier -> . REGISTER
    (25) type_specifier -> . VOID
    (26) type_specifier -> . CHAR
    (27) type_specifier -> . SHORT
    (28) type_specifier -> . INT
    (29) type_specifier -> . LONG
    (30) type_specifier -> . FLOAT
    (31) type_specifier -> . DOUBLE
    (32) type_specifier -> . SIGNED
    (33) type_specifier -> . UNSIGNED
    (34) type_specifier -> . BOOL
    (35) type_specifier -> . struct_or_union_specifier
    (36) type_specifier -> . enum_specifier
    (37) type_qualifier -> . CONST
    (38) type_qualifier -> . RESTRICT
    (39) type_qualifier -> . VOLATILE
    (24) function_specifier -> . INLINE
    (49) struct_or_union_specifier -> . struct_or_union IDENTIFIER { struct_declaration_list }
    (50) struct_or_union_specifier -> . struct_or_union { struct_declaration_list }
    (51) struct_or_union_specifier -> . struct_or_union IDENTIFIER
    (40) enum_specifier -> . ENUM { enumerator_list }
    (41) enum_specifier -> . ENUM IDENTIFIER { enumerator_list }
    (42) enum_specifier -> . ENUM { enumerator_list , }
    (43) enum_specifier -> . ENUM IDENTIFIER { enumerator_list , }
    (44) enum_specifier -> . ENUM IDENTIFIER
    (52) struct_or_union -> . STRUCT
    (53) struct_or_union -> . UNION
